@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.6 2004/04/27 15:34:19 xtraeme Exp $
+# $NetBSD: Makefile,v 1.7 2004/05/01 10:46:11 xtraeme Exp $
 
-DISTNAME=	mklivecd-0.5
+DISTNAME=	mklivecd-0.6
 CATEGORIES=	sysutils
 MASTER_SITES=	# empty
 DISTFILES=	# empty
