@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5782 2004/04/30 23:33:37 snj Exp $
+$NetBSD: CHANGES,v 1.5783 2004/05/01 10:46:10 xtraeme Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -2304,3 +2304,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated sablevm-classpath to 1.1.3 [jmmv 2004-04-30]
 	Updated sablevm-classpath-gui to 1.1.3 [jmmv 2004-04-30]
 	Updated gqview to 1.4.3 [snj 2004-04-30]
+	Updated mklivecd to 0.6 [xtraeme 2004-05-01]
